refactor(2.4): enable virtual threads for HTTP server
